--- a/week5/JinsooSon_Assignment.html
+++ b/week5/JinsooSon_Assignment.html
@@ -99,11 +99,13 @@
         </ul>
       </li>
 
-      <script>
+      <script defer>
+        "use strict";
+        const log = (...els) =>
+          els.length === 1 ? console.log(els[0]) : console.log(els.join(" "));
         // ====================
         // 1.) Detailed Country Objects
         // ====================
-        const log = (el) => console.log(el);
 
         // Function 1
         // Get 4 parameters(name, population, capital, isMonarchy(boolean type))
@@ -211,38 +213,261 @@
         </p>
       </li>
 
-      <script>
+      <script defer>
+        "use strict";
         // ===================
         // 2.) Counting Items in Huge Array
         // ===================
 
-        const bigLettersArr = [ "X","E","Q","M","L","L","L","B","X","C","A","F",
-                                "X","W","B","W","A","F","D","Z","B","C","L","F",
-                                "M","E","B","E","A","M","L","L","B","G","L","G",
-                                "H","F","H","G","M","A","F","B","B","C","G","F",
-                                "H","Z","B","L","L","H","J","L","L","C","A","M",
-                                "A","X","W","K","W","A","J","B","L","C","A","M",
-                                "B","K","M","R","A","L","L","B","G","W","J","F",
-                                "H","Z","B","L","L","H","U","L","L","C","A","P",
-                                "U","X","W","K","W","A","J","R","T","C","A","M",
-                                "L","K","U","E","U","B","U","B","G","W","J","F",
-                                "X","E","Q","M","L","L","O","B","X","C","A","F",
-                                "X","W","I","W","A","F","K","Z","B","C","L","F",
-                                "M","E","I","E","A","M","L","L","B","G","L","G",
-                                "H","F","H","G","D","A","F","B","B","C","G","F",
-                                "K","Z","R","L","L","H","J","L","L","C","A","M",
-                                "A","X","W","K","W","A","N","B","L","C","A","M",
-                                "B","K","M","R","A","N","L","B","G","W","J","F",
-                                "H","Z","B","L","N","H","U","L","D","C","A","M",
-                                "U","X","W","K","W","A","J","R","T","C","A","M",
-                                "P","K","U","D","U","B","U","B","G","W","J","F",];
+        const bigLettersArr = [
+          "X",
+          "E",
+          "Q",
+          "M",
+          "L",
+          "L",
+          "L",
+          "B",
+          "X",
+          "C",
+          "A",
+          "F",
+          "X",
+          "W",
+          "B",
+          "W",
+          "A",
+          "F",
+          "D",
+          "Z",
+          "B",
+          "C",
+          "L",
+          "F",
+          "M",
+          "E",
+          "B",
+          "E",
+          "A",
+          "M",
+          "L",
+          "L",
+          "B",
+          "G",
+          "L",
+          "G",
+          "H",
+          "F",
+          "H",
+          "G",
+          "M",
+          "A",
+          "F",
+          "B",
+          "B",
+          "C",
+          "G",
+          "F",
+          "H",
+          "Z",
+          "B",
+          "L",
+          "L",
+          "H",
+          "J",
+          "L",
+          "L",
+          "C",
+          "A",
+          "M",
+          "A",
+          "X",
+          "W",
+          "K",
+          "W",
+          "A",
+          "J",
+          "B",
+          "L",
+          "C",
+          "A",
+          "M",
+          "B",
+          "K",
+          "M",
+          "R",
+          "A",
+          "L",
+          "L",
+          "B",
+          "G",
+          "W",
+          "J",
+          "F",
+          "H",
+          "Z",
+          "B",
+          "L",
+          "L",
+          "H",
+          "U",
+          "L",
+          "L",
+          "C",
+          "A",
+          "P",
+          "U",
+          "X",
+          "W",
+          "K",
+          "W",
+          "A",
+          "J",
+          "R",
+          "T",
+          "C",
+          "A",
+          "M",
+          "L",
+          "K",
+          "U",
+          "E",
+          "U",
+          "B",
+          "U",
+          "B",
+          "G",
+          "W",
+          "J",
+          "F",
+          "X",
+          "E",
+          "Q",
+          "M",
+          "L",
+          "L",
+          "O",
+          "B",
+          "X",
+          "C",
+          "A",
+          "F",
+          "X",
+          "W",
+          "I",
+          "W",
+          "A",
+          "F",
+          "K",
+          "Z",
+          "B",
+          "C",
+          "L",
+          "F",
+          "M",
+          "E",
+          "I",
+          "E",
+          "A",
+          "M",
+          "L",
+          "L",
+          "B",
+          "G",
+          "L",
+          "G",
+          "H",
+          "F",
+          "H",
+          "G",
+          "D",
+          "A",
+          "F",
+          "B",
+          "B",
+          "C",
+          "G",
+          "F",
+          "K",
+          "Z",
+          "R",
+          "L",
+          "L",
+          "H",
+          "J",
+          "L",
+          "L",
+          "C",
+          "A",
+          "M",
+          "A",
+          "X",
+          "W",
+          "K",
+          "W",
+          "A",
+          "N",
+          "B",
+          "L",
+          "C",
+          "A",
+          "M",
+          "B",
+          "K",
+          "M",
+          "R",
+          "A",
+          "N",
+          "L",
+          "B",
+          "G",
+          "W",
+          "J",
+          "F",
+          "H",
+          "Z",
+          "B",
+          "L",
+          "N",
+          "H",
+          "U",
+          "L",
+          "D",
+          "C",
+          "A",
+          "M",
+          "U",
+          "X",
+          "W",
+          "K",
+          "W",
+          "A",
+          "J",
+          "R",
+          "T",
+          "C",
+          "A",
+          "M",
+          "P",
+          "K",
+          "U",
+          "D",
+          "U",
+          "B",
+          "U",
+          "B",
+          "G",
+          "W",
+          "J",
+          "F",
+        ];
         // Create an array which has 26 empty elements
         // Calculate the ASCII code value by adding 65 to the index value of each element
         // Change the value of element to the appropriate letter. (Order : A to Z)
         const aToZarr = Array(26)
           .fill()
           .map((_, i) => String.fromCharCode(i + 65));
-        
+
         // Create an array which has 26 empty elements
         // Return the number of each letter in the array(bigLettersArr)
         // and change the value of each element to the returned value. (Order : A to Z)
